# LOTR-MPC-Autofill

./: .gitattributes  .gitignore  README.md  build_exe.py  pyinstaller_entry.py  pyproject.toml  run_tests.py
Autofiller/: __init__.py  backs.py  cli.py  interactive.py  model.py  parsing.py  sets.py
Autofiller/upload/: desktop_tool.py  mpc.py  mpc_xml.py  plan.py  runner.py
lotrautofill/: build.py  cli.py  database.py  hallofbeorn.py  i18n.py  ringsdb.py  sets.py
lotrautofill/catalog/: database.py  epiccardlist.py  hallofbeorn.py  hierarchy.py  library_catalog.py
lotrautofill/catalog/data/: cardlists.json
lotrautofill/mpc/: __init__.py  config.py  pricing.py  runner.py
lotrautofill/upload/: config.py  desktop_tool (# Name clash 2026-07-21 4mwfw3C #).py  desktop_tool.py  mpc.py
lotrautofill/web/: __init__.py  page.py  server.py
lotrautofill/webgui/: page.py  server.py
scripts/: build_carddb.py
sets_folder/: README.md
sets_folder/Card_Backs/Card_Backs/: readme.txt
tests/: test_build.py  test_config.py  test_database.py  test_decklist.py  test_epiccardlist.py  test_matching.py  test_mpc_driver.py  test_mpc_xml.py  test_parsing.py  test_plan.py  test_pricing.py  test_ringsdb.py  test_sets.py  test_webgui.py
toPrint/: README.md
